autotests/syntax-tests/tests/negative/negative125.sref
Name { Name Name , Name Name : Name ( $LABEL Name Name ) Name
, : = : = ; = ; } ; 